Asset Browser will add incompatible assets to the scene #111779

Closed
opened 2023-09-01 10:06:01 +02:00 by Ludvik Koutny · 1 comment
Contributor

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 536.99

Blender Version
Broken: version: 3.6.2, branch: blender-v3.6-release, commit date: 2023-08-16 16:43, hash: e53e55951e7a
Worked: (newest version of Blender that worked as expected)

Short description of error
When drag and dropping Assets from Asset Browser onto editors of incompatible type, the assets won't be added to the editor but still linked to the scene.

Exact steps for others to reproduce the error

  1. Have external Asset Library containing shader node group defined in File Paths Section of User Preferences
  2. Set Import Method in File Paths section to "Link"
  3. Open Geometry Nodes editor and drag & drop shader node group from Asset Browser onto it

Result: The shader node group asset won't be placed into Geometry Nodes editor because it's of incompatible type, but will still be linked to the scene (visible in Orphan Data mode of outliner)
Expected: The asset won't be linked to the scene file if it wasn't used.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 536.99 **Blender Version** Broken: version: 3.6.2, branch: blender-v3.6-release, commit date: 2023-08-16 16:43, hash: `e53e55951e7a` Worked: (newest version of Blender that worked as expected) **Short description of error** When drag and dropping Assets from Asset Browser onto editors of incompatible type, the assets won't be added to the editor but still linked to the scene. **Exact steps for others to reproduce the error** 1. Have external Asset Library containing shader node group defined in File Paths Section of User Preferences 2. Set Import Method in File Paths section to "Link" 3. Open **Geometry** Nodes editor and drag & drop **shader** node group from Asset Browser onto it Result: The shader node group asset won't be placed into Geometry Nodes editor because it's of incompatible type, but will still be linked to the scene (visible in Orphan Data mode of outliner) Expected: The asset won't be linked to the scene file if it wasn't used.
Ludvik Koutny added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-09-01 10:06:02 +02:00
Member

Can confirm the behavior, will check on this

Can confirm the behavior, will check on this
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-09-01 12:26:28 +02:00
Iliya Katushenock added the
Module
Pipeline, Assets & IO
label 2023-09-01 13:08:21 +02:00
Philipp Oeser self-assigned this 2023-09-04 11:29:55 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-04 12:44:09 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111779
No description provided.